# AoC2023

./: .gitignore  CMakeLists.txt  README.md  add_day.sh  main.cc  template_bench.cc  template_day.cc  template_day.h  template_test.cc
benches/: bench_day1.cc  bench_day10.cc  bench_day11.cc  bench_day2.cc  bench_day3.cc  bench_day4.cc  bench_day5.cc  bench_day6.cc  bench_day7.cc  bench_day8.cc  bench_day9.cc
inputs/: day1_part2_test2.txt
src/: all_days.h  day.cc  day.h  day1.cc  day1.h  day10.cc  day10.h  day11.cc  day11.h  day2.cc  day2.h  day3.cc  day3.h  day4.cc  day4.h  day5.cc  day5.h  day6.cc  day6.h  day7.cc  day7.h  day8.cc  day8.h  day9.cc  day9.h
tests/: test_day1.cc  test_day10.cc  test_day11.cc  test_day2.cc  test_day3.cc  test_day4.cc  test_day5.cc  test_day6.cc  test_day7.cc  test_day8.cc  test_day9.cc
